--- a/angular.json
+++ b/angular.json
@@ -136,7 +136,8 @@
   "cli": {
     "schematicCollections": [
       "@ionic/angular-toolkit"
-    ]
+    ],
+    "analytics": "b6704983-8e60-40d6-a9d2-86a40a0cef97"
   },
   "schematics": {
     "@ionic/angular-toolkit:component": {
